--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==2.1
 django-annoying==0.10.4
+django-toolbelt==0.0.1
+gunicorn==19.9.0
 pip-autoremove==0.9.1
+psycopg2==2.7.6.1
 psycopg2-binary==2.7.5
 python-barcode==0.9.0
 pytz==2018.5
+static3==0.7.0
