--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
+boto3==1.9.50
+botocore==1.12.50
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.1
 django-annoying==0.10.4
+django-storages==1.7.1
 django-toolbelt==0.0.1
+docutils==0.14
 gunicorn==19.9.0
+jmespath==0.9.3
 pip-autoremove==0.9.1
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.5
 python-barcode==0.9.0
+python-dateutil==2.7.5
 pytz==2018.5
+s3transfer==0.1.13
+six==1.11.0
 static3==0.7.0
+urllib3==1.24.1
 whitenoise==4.1.2
